src/styles/index.css
@import url('https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap');

body {
  margin: 0;  
  font-family: "Yusei Magic", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  margin: 25px;
}

.item {
  width: 43%;
}

.item img {
  width: 100%;
  border-radius: 50%;
}

.userName {
  font-size: 55px;
  letter-spacing: 15px;
}

@media (width <= 980px) {
  .item {
    width: 100%;
    text-align: center;
  }
}

/* viewContainerSystem */
.view-container {
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
}
@media (min-width: 768px) {
  .view-container {
    width: 750px;
  }
}
@media (min-width: 992px) {
  .view-container {
    width: 970px;
  }
}
@media (min-width: 1200px) {
  .view-container {
    width: 1170px;
  }
}

